z-index fixed

--- a/css/generalStyles.css
+++ b/css/generalStyles.css
@@ -23,7 +23,7 @@ article h4{
     position: fixed;
     width: 100%;
     margin-top: -16vh;
-
+    z-index: 90;
 }
 .flexcont{
     margin: auto;
